# bitcoin-sv

./: .clangd  .gitattributes  .gitignore  .gitmodules  .gitpod.dockerfile  .gitpod.yml  CLAUDE.md  CMakeLists.txt  CMakeSettings.json  CONTRIBUTING.md  COPYING  Dockerfile  INSTALL.md  Jenkinsfile  LICENSE  Makefile.am  README.md  autogen.sh  bitbucket-pipelines.yml  configure.ac  pipe-codecoverage.py  pipe-unittests.py  pycodestyle.sed  pycodestyle.sh  setup.cfg
src/: .clang-tidy  CMakeLists.txt  Makefile.am  Makefile.bench.include  Makefile.crc32c.include  Makefile.leveldb.include  Makefile.test.include  abort_node.cpp  abort_node.h  addrdb.cpp  addrdb.h  addrman.cpp  addrman.h  amount.cpp  amount.h  arith_uint256.cpp  arith_uint256.h  async_file_reader.h  base58.cpp  base58.h  big_int.cpp  big_int.h  big_int.hpp  bitcoin-cli.cpp  bitcoin-miner.cpp  bitcoin-tx-res.rc  bitcoin-tx.cpp  bitcoind-res.rc  bitcoind.cpp  block_file_access.cpp  block_file_access.h  block_file_info.cpp  block_file_info.h  block_hasher.h  block_index.cpp  block_index.h  block_index_store.cpp  block_index_store.h  block_index_store_loader.cpp  block_index_store_loader.h  (+214 more)
src/bench/: .clang-tidy  CMakeLists.txt  Examples.cpp  base58.cpp  bench.cpp  bench.h  bench_bitcoin.cpp  ccoins_caching.cpp  checkblock.cpp  checkqueue.cpp  coin_selection.cpp  crypto_hash.cpp  cscript.cpp  interpreter.cpp  lockedpool.cpp  mempool_eviction.cpp  mempooltxdb.cpp  op_codes.cpp  perf.h  rollingbloom.cpp  safe_mode.cpp  serialisation.cpp  thread_safe_queue.cpp
src/compat/: glibc_compat.cpp  glibc_sanity.cpp  glibcxx_sanity.cpp
src/config/: CMakeLists.txt  bitcoin-config.h.cmake.in
src/consensus/: consensus.h  merkle.cpp  merkle.h  params.h  validation.h
src/crypto/: .clang-tidy  CMakeLists.txt  aes.cpp  aes.h  chacha20.cpp  chacha20.h  common.h  hmac_sha256.cpp  hmac_sha256.h  hmac_sha512.cpp  hmac_sha512.h  ripemd160.cpp  ripemd160.h  sha1.cpp  sha1.h  sha256.cpp  sha256.h  sha256_sse4.cpp  sha512.cpp  sha512.h
src/double_spend/: dsattempt_handler.cpp  dsattempt_handler.h  dscallback_msg.cpp  dscallback_msg.h  dsdetected_defaults.h  dsdetected_message.cpp  dsdetected_message.h  dstxn_serialiser.cpp  dstxn_serialiser.h  time_limited_blacklist.h
src/invalid_txn_sinks/: file_sink.cpp  file_sink.h  zmq_sink.cpp  zmq_sink.h
src/leveldb/: CMakeLists.txt  Makefile
src/miner_id/: coinbase_doc.cpp  coinbase_doc.h  dataref_index.cpp  dataref_index.h  dataref_index_detail.h  datareftx.cpp  datareftx.h  miner_id.cpp  miner_id.h  miner_id_db.cpp  miner_id_db.h  miner_id_db_defaults.h  miner_info.cpp  miner_info.h  miner_info_doc.cpp  miner_info_doc.h  miner_info_error.cpp  miner_info_error.h  miner_info_ref.cpp  miner_info_ref.h  miner_info_tracker.cpp  miner_info_tracker.h  revokemid.cpp  revokemid.h
src/mining/: .clang-tidy  assembler.cpp  assembler.h  candidates.cpp  candidates.h  factory.cpp  factory.h  group_builder.cpp  group_builder.h  journal.cpp  journal.h  journal_builder.cpp  journal_builder.h  journal_change_set.cpp  journal_change_set.h  journal_entry.cpp  journal_entry.h  journaling_block_assembler.cpp  journaling_block_assembler.h  legacy.cpp  legacy.h
src/net/: .clang-tidy  array_parser.h  association.cpp  association.h  association_id.cpp  association_id.h  authconn.cpp  authconn.h  block_download_tracker.cpp  block_download_tracker.h  block_parser.cpp  block_parser.h  blocktxn_parser.cpp  blocktxn_parser.h  cmpct_size.cpp  cmpct_size.h  cmpctblock_parser.cpp  cmpctblock_parser.h  disk_backed_parser.cpp  disk_backed_parser.h  fixed_len_multi_parser.cpp  fixed_len_multi_parser.h  fixed_len_parser.cpp  fixed_len_parser.h  mempool_msg.h  msg_buffer.cpp  msg_buffer.h  msg_parser.h  msg_parser_buffer.cpp  msg_parser_buffer.h  net.cpp  net.h  net_message.cpp  net_message.h  net_processing.cpp  net_processing.h  net_types.h  netaddress.cpp  netaddress.h  netbase.cpp  (+21 more)
src/policy/: .clang-tidy  fees.cpp  fees.h  policy.cpp  policy.h
src/primitives/: block.cpp  block.h  transaction.cpp  transaction.h
src/rpc/: abc.cpp  blockchain.cpp  blockchain.h  client.cpp  client.h  client_config.cpp  client_config.h  client_utils.cpp  client_utils.h  frozentxo_rpc.cpp  http_protocol.h  http_request.cpp  http_request.h  http_response.cpp  http_response.h  jsonwriter.cpp  jsonwriter.h  miner_info.cpp  mining-fbb.cpp  mining.cpp  mining.h  mining2.cpp  misc.cpp  misc.h  net.cpp  protocol.cpp  protocol.h  rawtransaction.cpp  register.h  safe_mode.cpp  server.cpp  server.h  text_writer.cpp  text_writer.h  tojson.h  webhook_client.cpp  webhook_client.h  webhook_client_defaults.h
src/script/: .clang-tidy  bitcoinconsensus.cpp  bitcoinconsensus.h  conditional_tracker.cpp  conditional_tracker.h  instruction.h  instruction_iterator.h  int_serialization.h  interpreter.cpp  interpreter.h  ismine.cpp  ismine.h  limitedstack.cpp  limitedstack.h  malleability_status.cpp  malleability_status.h  opcodes.cpp  opcodes.h  script.cpp  script.h  script_error.cpp  script_error.h  script_flags.cpp  script_flags.h  script_num.cpp  script_num.h  scriptcache.cpp  scriptcache.h  shiftnum.cpp  shiftnum.h  sigcache.cpp  sigcache.h  sighashtype.h  sign.cpp  sign.h  standard.cpp  standard.h
src/secp256k1/: .gitignore  CMakeLists.txt  README.md  configure.ac
src/seeder/: bitcoin.cpp  compat.h  db.h  dns.cpp  main.cpp
src/support/: events.h  lockedpool.cpp  lockedpool.h
src/test/: .clang-tidy  CMakeLists.txt  DoS_tests.cpp  README.md  addrman_tests.cpp  alertnotify_tests.cpp  allocator_tests.cpp  arith_uint256_tests.cpp  array_parser_tests.cpp  authconn_tests.cpp  base32_tests.cpp  base58_tests.cpp  base58data_tests.cpp  base64_tests.cpp  big_int_tests.cpp  bip32_tests.cpp  block_download_tracking_tests.cpp  block_index_mutex_distribution_tests.cpp  block_info_tests.cpp  block_parser_tests.cpp  block_read_cache_tests.cpp  blockcheck_tests.cpp  blockencodings_tests.cpp  blockfile_reading_tests.cpp  blockindex_with_descendants_tests.cpp  blockmaxsize_tests.cpp  blockstatus_tests.cpp  blocktxn_parser_tests.cpp  blockvalidationstatus_tests.cpp  (+154 more)
(+653 files in other folders)
